--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,6 +14,13 @@ body {
 }
 
 .App {
+
+}
+
+.loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 100%;
+    height: 200px;
 }
