--- a/src/styles/Tasks.css
+++ b/src/styles/Tasks.css
@@ -22,6 +22,13 @@
     cursor: pointer;
 }
 
+.hide {
+    display: none;
+}
+.unHide {
+    display: block;
+}
+
 .task {
     cursor: pointer;
     display: flex;
@@ -30,7 +37,7 @@
 }
 
 .task__title {
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
     padding: 10px;
     display: flex;
@@ -39,9 +46,7 @@
     background: #607d8b;
     width: 100%;
     color: white;
-    max-height: 50px;
     overflow: hidden;
-    line-height: 26px;
 }
 
 .task__line {
@@ -61,6 +66,7 @@
     border-radius: 0 0 10% 0;
     overflow: hidden;
     line-height: 18px;
+    word-break: break-word;
 }
 
 .TaskEditor {
@@ -96,6 +102,16 @@
     cursor: pointer;
 }
 
+.taskEditor__trashButton {
+    width: 32px;
+    height: 32px;
+    margin: 10px;
+    outline: none;
+    background: url("../assets/images/trash32.png") center center;
+    border: 0;
+    cursor: pointer;
+}
+
 .taskEditor__title {
     border: 0;
     overflow: hidden;
@@ -116,7 +132,7 @@
     max-height: 100vh;
     background: #fffde7;
     outline: none;
-    padding: 20px;
+    padding: 20px 12% 20px 20px;
     font-size: 20px;
     border: 0;
 }
